Enhanced navbar with modern UI and professional features - Major UI improvements with fixed positioning, enhanced spacing, modernized colors - Added professional features like status indicators, quick actions, live time - Technical enhancements with spring animations and mobile optimizations - Enhanced footer, smoky glow effects, and improved layout throughout

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <script defer src="/_vercel/insights/script.js"></script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-gray-900 text-gray-100 antialiased m-0 p-0 w-full min-h-screen overflow-x-hidden">
-    <div id="root" class="w-full min-h-screen"></div>
+  <body class="bg-gray-900 text-gray-100 antialiased m-0 p-0 w-full h-screen">
+    <div id="root" class="w-full h-full"></div>
     <script type="module" src="/index.tsx"></script>
     
     <!-- PrismJS Scripts -->
